# cinema_app

./: .gitignore  README.md  asgi.py  pyproject.toml  wsgi.py
app/clients/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
app/clients/migrations/: 0001_initial.py  0002_auto_20200827_1500.py  0002_auto_20200830_1200.py  0003_booking_user.py
app/clients/tests/: test_views_3.py
app/core/: constants.py  models.py
app/structure/: admin.py  models.py  urls.py  views.py
app/structure/migrations/: 0001_initial.py  0002_auto_20200824_0921.py  0002_auto_20200827_1500.py  0002_auto_20200830_1200.py
app/structure/tests/: test_views_2.py
app/users/: admin.py  constants.py  decorators.py  forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: test_decorators_1.py  test_forms_1.py  test_views_1.py
settings/: base.py  development.py  local.py
static/: style.css
templates/app/: ad_form.html  base.html  booking_form.html  booking_list.html  hall_form.html  hall_list.html  home.html  movie_form.html  movie_list.html  pdf.html  price_form.html  price_list.html  promo_form.html  promo_list.html  seat_form.html  seat_list.html  show_form.html  show_list.html
templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_done.html  register.html
urls/: urls.py
