[tool.poetry]
name = "cinema"
version = "0.1.0"
description = ""
authors = ["adamjanas <a.janas@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.4.1"
flake8 = "^3.8.3"
bandit = "^1.6.2"
autoflake = "^1.3.1"
django-cleanup = "^5.0.0"
django-crispy-forms = "^1.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
